--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,8 @@
 .container{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
+    background-image: url(../images/wall.png);
 }
 
 .menu{
@@ -13,6 +14,18 @@
     width: 100%;
     background-color: #000000;
     color: #ffffff;
+
+    border-bottom: 5px solid #ffd700;
+}
+
+.menu-lives{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-time h2:nth-child(2), .menu-score h2:nth-child(2){
+    margin-top: 1rem;
 }
 
 .panel{
@@ -20,16 +33,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #ff0000;
 }
 
 .square{
-    height: 150px;
-    width: 150px;
+    height: 25vh;
+    width: 25vh;
     border: 1px solid #000000;
-    background-color: #7fffd4;
+    background-color: #1aeaa5;
 }
 
 .enemy{
-    background-color: red;
+    background-image: url("../images/ralph.png");
+    background-size: cover;
 }
